<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Campus</string>
    <string name="action_settings">Settings</string>
    <string name="navdrawer_item_my_schedule">Schedule</string>
    <string name="navdrawer_item_my_tasks">Tasks</string>
    <string name="navdrawer_item_my_lessons">Lessons</string>
    <string name="navdrawer_item_my_notes">Notes</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_feedback">Feedback</string>
    <string name="drawer_open">Select item</string>
    <string name="drawer_close"></string>
    <string name="my_schedule_tab_desc_a11y">Tap to show your schedule for <xliff:g id="day">%1$s</xliff:g>.</string>
    <string name="my_schedule_page_desc_a11y">Now showing your schedule for <xliff:g id="day">%1$s</xliff:g></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome_to_campus_app">Welcome to the Campus app!</string>
    <string name="attract_text">Before we begin. here is some important information for you about this app. This will only take a minute!</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="week">Week</string>
    <string name="mail_to_support" translatable="false">mailto:kbis_kpi@ukr.net</string>
    <string name="email_app_not_found">Email app not found</string>
    <string name="title_activity_schedule_item_detail"></string>
    <string name="today_plan">Today\'s plan</string>
    <string name="to_study">To study</string>
    <string name="homework">Homework</string>
    <string name="exams">Exams</string>
    <string name="debug_text" translatable="false">DebugText</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="days">days</string>
    <string name="title_activity_login">Login</string>
    <string name="login_into_campus">Sign into Campus</string>
    <string name="exit_login">Close</string>
    <string name="enter_your_group">Enter your Group</string>
    <string name="logo">Logo</string>
    <string name="title_activity_about">About app</string>
    <string name="application_name">Application name</string>
    <string name="build_name">Build name</string>
    <string name="build_date">Build date</string>
    <string name="build_type">Build type</string>
    <string name="build_version">Build version</string>
    <string name="about_summary">Show information about app</string>
    <string name="title_activity_teacher">Teachers</string>
    <string name="invalid_auth_data">Login or password is incorrect</string>
    <string name="schedule">Schedule</string>
    <string name="teachers">Teachers</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server_is_down">Server temporarily unavailable, please try again later</string>
    <string name="internal_error">Internal error occurred. Please let us know about it.</string>
    <string name="no_internet">Check your Internet connection</string>
    <string name="in_progress">Wait please&#8230;</string>
    <string name="sign_in">Sign in</string>
    <string name="help">Help</string>
    <string name="have_no_account">Have no account?</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="up_to_date">All is up to date</string>
    <string name="ok">OK</string>
    
    <string name="lipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam est arcu, pulvinar varius aliquet nec, hendrerit nec lectus. Mauris sed consequat dolor. Ut vitae rhoncus orci, id iaculis arcu. Ut sollicitudin, diam et bibendum ullamcorper, purus turpis finibus orci, sed pretium justo nisi sit amet diam. Donec eu pellentesque massa, vulputate efficitur ante. Donec sit amet sagittis diam, quis hendrerit augue. Quisque lacus nibh, vulputate id pharetra vel, mollis non risus.\n\n
        Sed molestie pellentesque ex nec aliquam. In a sollicitudin dui. Vestibulum dapibus turpis sit amet rhoncus vehicula. Donec a nisl enim. Quisque vitae pretium augue. Praesent ac bibendum neque. Nulla id pretium massa. Curabitur egestas odio urna, at aliquam mauris tempus vitae. Praesent vehicula arcu non tincidunt vestibulum. Suspendisse at nulla pretium, fringilla est congue, ultrices tellus. Vivamus at tristique diam, id ornare mauris. Nulla sollicitudin varius metus quis dictum.</string>
    <string name="dnihze" translatable="false">dniHze</string>
    <string name="deepnekroz" translatable="false">Deepnekro</string>


</resources>
