<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!--Main Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <!-- We use a Toolbar so that our drawer can be displayed
             in front of the action bar -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:minHeight="@dimen/toolbar_width"
                android:background="?attr/colorPrimary"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:foreground="?android:windowContentOverlay">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:background="?attr/colorPrimary"
                android:layout_gravity="bottom" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="%dayOfWeek%"
                    android:id="@+id/week"
                    android:layout_marginLeft="80dp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="1"
                android:id="@+id/ll3">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="70dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/iw"
                        android:src="@drawable/person_image_empty"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="0dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="%lessonName%"
                            android:id="@+id/lessonName"
                            android:textColor="@android:color/black"
                            android:layout_weight="0.86"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="19 min"
                            android:id="@+id/textView2"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="18dp" />
                    </LinearLayout>

                    <ProgressBar
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="10dp"
                        android:id="@+id/progressBar"
                        android:progress="50"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="-2dp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="1"
                android:id="@+id/linear2">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="70dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/person_image_empty"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="0dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="%audienceName%"
                            android:id="@+id/audience"
                            android:textColor="@android:color/black"
                            android:layout_weight="0.86"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="24dp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:weightSum="1"
                android:id="@+id/asd">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="70dp"
                    android:layout_height="match_parent">

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="0dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/today_plan"
                            android:id="@+id/textView"
                            android:textColor="@android:color/black"
                            android:layout_weight="0.86"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="20dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="24dp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/to_study"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:padding="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/homework"
                    android:id="@+id/textView4"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="2 unfinished"
                    android:id="@+id/textView5" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/exams"
                    android:id="@+id/textView6"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="1 to go"
                    android:id="@+id/textView7" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="3 due this week"
                    android:id="@+id/textView8"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <!--Navigation Drawer-->

    <include layout="@layout/navdrawer"/>

</android.support.v4.widget.DrawerLayout>